# ffmpeg-cpp

./: .gitignore  CMakeLists.txt
demos/remuxing/: compile_me.sh  output.mkv  remuxing
demos/simple_interface/: SimpleInterface.cpp
sources/Codecs/: VideoCodec.cpp
sources/FrameSinks/: Filter.h
sources/Muxing/: Muxer.h
sources/Sources/: Demuxer.cpp
